--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,9 @@ pipeline {
             args '-p 3000:3000'
         }
     }
+    triggers {
+        cron('*/1 * * * *')
+    }
     environment {
         CI = 'true'
     }
